--- a/package.json
+++ b/package.json
@@ -10,25 +10,41 @@
     "test": "jest"
   },
   "dependencies": {
+    "@callstack/repack": "https://sourceapp.tgdd.vn/app/repack.git#3.7.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-fast-image": "8.6.3",
+    "react-native-screens": "^3.29.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "redux-micro-frontend": "^1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-proposal-decorators": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/runtime": "^7.23.9",
+    "@callstack/repack": "https://sourceapp.tgdd.vn/app/repack.git#3.7.0",
+    "@mwg/eslint-config-react": "https://sourceapp.tgdd.vn/appplugins/eslint-config.git",
+    "@mwg/prettier-config": "https://sourceapp.tgdd.vn/appplugins/prettier-config.git",
+    "@react-native/metro-config": "0.72.11",
+    "@tsconfig/react-native": "3.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "18.0.0",
+    "@types/redux-logger": "3.0.12",
+    "babel-jest": "29.2.1",
+    "babel-loader": "9.1.3",
+    "babel-plugin-import-graphql": "2.8.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "29.2.1",
+    "metro-react-native-babel-preset": "0.76.8",
+    "react-native-flipper-databases": "2.5.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "terser-webpack-plugin": "5.3.9",
+    "ts-loader": "9.5.1",
+    "typescript": "^4.8.4",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4",
+    "webpack-node-externals": "3.0.0"
   },
   "engines": {
     "node": ">=18"
